@@ -1,6 +1,11 @@
 Noteworthy Changes in ssocr Releases
 ====================================
 
+Upcoming Version ?.??.? (????-??-??):
+-------------------------------------
+ * New option -N, --min-segment to specify the minimum width and height of
+   a segment, for both scanline based and ratio based character recognition
+
 Version 2.22.2 (2023-04-24):
 ----------------------------
  * Documentation improvements
